--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ table {
     border-spacing: 0;
 }
 
-/*  */
+/*  CSS STYLES */
 
 #main {
     min-height: 100vh;
@@ -147,8 +147,6 @@ table {
 .heading {
     font-size: 2em;
     margin: 1em 0em;
-    text-align: center;
-    /* vertical | horizontal */
 }
 
 .form{
@@ -203,7 +201,7 @@ table {
 .script{
     margin-left: 10px;
     /* border: 1px solid red; */
-    font: 0.8em sans-serif;
+    font: 0.8em;
     
 }
 
@@ -215,25 +213,21 @@ table {
     background-color: #1769aa;
     padding: 0.1em 0.6em;
     border-radius: 4px;
-    font-size: 0.8em;
+    font-size: 0.7em;
     color: white;
     font-weight:400;
 }
-
-.registerButton {
+.btnClass {
     width: 48%;
     padding: 1em;
-    background-color: #1769aa;
     border-radius: 4px;
     border: none;
     color: white;
 }
+.registerButton {
+    background-color: #1769aa;
+}
 
 .signinButton{
-    width: 48%;
-    padding: 1em;
-    border-radius: 4px;
-    border: none;
     background-color: green;
-    color: white;
 }
